--- a/_config.yml
+++ b/_config.yml
@@ -52,9 +52,9 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
   rss: true  # remove this line if you don't want to show an RSS link at the bottom
-  email: "someone@example.com"
+  email: "namelastname[at]gmail[dot]com"
   linkedin: berkay-kıcanaoğlu
-  google-scholar: your google scholar
+  google-scholar: rvitiIEAAAAJ
   github: berkaykicanaoglu
 #  patreon: DeanAttali
 #  youtube: "@daattali"
