--- a/_config.yml
+++ b/_config.yml
@@ -155,7 +155,7 @@ footer-hover-col: "#0085A1"
 
 navbar-img: "/assets/img/DALL-E_amsterdam_banner.png"
 #footer-img: "/assets/img/DALL-E_amsterdam_banner.png"
-page-img: "/assets/img/DALL-E_amsterdam_banner.png"
+#page-img: "/assets/img/DALL-E_amsterdam_banner.png"
 
 # Suggest a colour for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
 #mobile-theme-col: "#0085A1"
