--- a/_config.yml
+++ b/_config.yml
@@ -155,7 +155,7 @@ footer-hover-col: "#0085A1"
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
 
-navbar-img: "/assets/img/DALL-E_amsterdam_banner.png"
+# navbar-img: "/assets/img/DALL-E_amsterdam_banner.png"
 #footer-img: "/assets/img/DALL-E_amsterdam_banner.png"
 #page-img: "/assets/img/DALL-E_amsterdam_banner.png"
 
